Fixed card width, design is now responsive on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: Figtree;
-    src: url('/assets/fonts/Figtree-VariableFont_wght.ttf') format('truetype')
-}
 * {
     margin: 0;
     padding: 0;
@@ -20,21 +16,22 @@ body {
 .card {
     background-color: white;
     border: 1px solid black;
-    width: 300px;
+    width: 350px;
     border-radius: 15px;
     box-shadow: 8px 8px 0 hsl(0, 0%, 7%);
+    margin: 0 35px;
 }
 #illustration {
     display: flex;
     justify-content: center;
-    width: 85%;
+    width: 90%;
     height: 185px;
-    margin: 22px auto;
+    margin: 5% auto;
     object-fit: cover;
-    border-radius: 12px;
+    border-radius: 8px;
 }
 .content {
-    margin: 7.5%;
+    margin: 7.5% 5%;
     font-size: .8rem;
     font-weight: 500;
     line-height: 1.2rem;
@@ -42,11 +39,11 @@ body {
 }
 .content h2 {
     font-weight: 800;
-    font-size: 19px;
+    font-size: 1.2rem;
 }
 #box-text {
     background-color: hsl(47, 88%, 63%);
-    padding: 5px 12px;
+    padding: 5px 10px;
     font-weight: 800;
     border-radius: 4px;
     font-size: .7rem;
@@ -67,6 +64,7 @@ a:hover, a:active {
 #excerpt {
     color: hsl(0, 0%, 42%);
     margin-bottom: 20px;
+    padding-right: 20px;
 }
 .author {
     display: flex;
